logs/mc/JpsiLambda/run1/trigger_log.txt
PROCESSING MC for Run 1 Jpsi Lambda
Incoming entries = 10[1minput_line_67:2:3: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'poo'[0m
 (poo)
[0;1;32m  ^
[0mError in <HandleInterpreterException>: Error evaluating expression (poo).
Execution of your code was aborted.

40000
50000
60000
70000
80000
90000
100000
Outgoing entries = 81570
******************************************
Trigger cut made with exclusive efficiency = 78.3009% +/- 0.127709 %
******************************************
******************************************
Trigger cut made with inclusive efficiency = 5.82549% +/- 0.019794 %
******************************************
[0mroot [2] 
[0m[0mroot [2] 
[0m[0mroot [2] 
[0m[0mroot [2] poo
[0m[0mroot [3] 
[0m[0mroot [3] 
[0m[0mroot [3] 